<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <EditText
        android:id="@+id/nameId"
        android:layout_width="301dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cityId"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameId" />

    <EditText
        android:id="@+id/countryId"
        android:layout_width="296dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityId" />

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryId" />

    <EditText
        android:id="@+id/emailSignupId"
        android:layout_width="301dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneId" />

    <EditText
        android:id="@+id/passwordSignupId"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignupId" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="548dp"
        android:text="Create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>